--- a/JS/index.html
+++ b/JS/index.html
@@ -1,384 +1,155 @@
 <!DOCTYPE html>
-<html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-<style>
-* {
-  box-sizing: border-box;
-}
+<html lang="en">
 
-body {
-  background-color: #f1f1f1;
-}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <title>Metacube Parking System</title>
+</head>
 
-#regForm {
-  background-color: #ffffff;
-  margin: 100px auto;
-  font-family: Raleway;
-  padding: 40px;
-  width: 70%;
-  min-width: 300px;
-}
-
-h1 {
-  text-align: center;  
-}
-
-input {
-  padding: 10px;
-  width: 100%;
-  font-size: 17px;
-  font-family: Raleway;
-  border: 1px solid #aaaaaa;
-}
-
-/* Mark input boxes that gets an error on validation: */
-input.invalid {
-  background-color: #ffdddd;
-}
-input.weak {
-  border-color:red;
-}
-input.ok {
-  border-color:orange;
-}
-input.strong {
-  border-color:green;
-}
-
-/* Hide all steps by default: */
-.tab {
-  display: none;
-}
-
-button {
-  background-color: #4CAF50;
-  color: #ffffff;
-  border: none;
-  padding: 10px 20px;
-  font-size: 17px;
-  font-family: Raleway;
-  cursor: pointer;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-#prevBtn {
-  background-color: #bbbbbb;
-}
-
-/* Make circles that indicate the steps of the form: */
-.step {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbbbbb;
-  border: none;  
-  border-radius: 50%;
-  display: inline-block;
-  opacity: 0.5;
-}
-
-.step.active {
-  opacity: 1;
-}
-
-/* Mark the steps that are finished and valid: */
-.step.finish {
-  background-color: #4CAF50;
-}
-.pbutton{
-			   padding:12px 20px;
-			   margin: 8px 0;
-			   background-color:lightblue;
-			   color:black;
-			 }
-.column{
-			    float:center;
-				text-align:center;
-				border :2px solid lightblue;
-				color:blue;
-			 }
-</style>
 <body>
-
-<form id="regForm">
-  
-  <!-- One "tab" for each step in the form: -->
-  <div class="tab"><h2>Register:</h2>Name:
-    <p><input placeholder="Name..." oninput="this.className = ''" name="name" id="ename"></p>
-  </div>
-  <div class="tab">Enter your Gender:
-    <p><select name="gender" oninput="this.className = ''">
-			   <option value="male">Male</option>
-			   <option value="female">Female</option>
-			   <option value="other">Other</option>
-			</select>
-	</p>
-  </div>
-  <div class="tab">Email:
-    <p><input placeholder="Email.." oninput="this.className = ''" name="email" id="email"></p>
-  </div>
-  <div class="tab">Password:
-    <p><input placeholder="Password..." oninput="this.className = ''" name="password" type="password" id="password"></p>
-  </div>
-  <div class="tab">Confirm Password:
-    <p><input placeholder="Confirm Password..." oninput="this.className = ''" name="cpassword" type="password" ></p>
-  </div>
-  <div class="tab">Contact Number:
-    <p><input placeholder="Contact..." oninput="this.className = ''" name="contact" id="contact"></p>
-  </div>
-  <div class="tab">
-    <p>Registration Id : EFG-123 </p>
-  </div>
-  
-  <div class="tab"><h2>Vehicle Information</h2>Vehicle Make:
-    <p><input placeholder="Vehicle Make..." oninput="this.className = ''" name="vmake"></p>
-  </div>
-  <div class="tab">Vehicle Model:
-    <p><input placeholder="Vehicle Model..." oninput="this.className = ''" name="vmodel"></p>
-  </div>
-  <div class="tab">Vehicle Type:
-    <p><select name="type" oninput="getValue()" id="type">
-			   <option value="cycle">Cycle</option>
-			   <option value="motorcycle">Motor Cycle</option>
-			   <option value="fourwheeler">Four-Wheeler</option>
-			</select>
-	</p>
-  </div>
-  <div class="tab">Vehicle Number:
-    <p><input placeholder="Vehicle Number.." oninput="this.className = ''" name="vnum"></p>
-  </div>
-  <div class="tab">Employee Id:
-    <p><input placeholder="Employee Id..." oninput="this.className = ''" name="eid" ></p>
-  </div>
-  <div class="tab">Identification:
-    <p><textarea  placeholder="Identification..." oninput="this.className = ''"  name="identification" rows="4" cols="50"></textarea></p>
-  </div>
-  <div class="tab">
-    <div id="price">
-    <button onclick="pricing()">Pricing</button>
+    <!-- Nav Bar of the page which helps you to navigate directly to a particular -->
+    <nav class="nav_container">
+        <ul class="nav_list">
+        <a class="nav_tab" href="#addEmployeeSection" class="navItem">Add Employee</a>
+        <a class="nav_tab" href="#addVehicleSection" class="navItem">Add Vehicle</a>
+        <a class="nav_tab" href="#pricingSection" class="navItem">Pricing</a>
+        </ul>
+    </nav>
+    <!-- cover image of the page -->
+    <div class="page_header">
+        <h1>WELCOME TO META PARKING !</h1>
     </div>
-  </div>
-  <div class="tab">
-    <div id="getpass" class="pbutton">
-    <button onclick="price()">Total</button>
+    <!-- Add employee section where user can add an employee -->
+    <div id="addEmployeeSection">
+        <center>
+            <div class="collapsible">
+                <h3 class="sectionHeading">Add Employee</h3>
+                <span ></span>
+            </div>
+            <div class="content">
+                <label id="label-with-name" class="salutation hide"></label>
+                <input placeholder="Full name" type="text" class="textInput" id="fullName"
+                    onkeypress="employee.handlePress(event)" />
+                <span style="font-size:10px;color: red;" class="errorText" id="nameError">Name should contain at least 2
+                    characters and numbers are not allowed.</span>
+                <div class="radioContainer hide" id="gender" onkeypress="employee.handlePress(event)">
+                    Gender &ThickSpace;&ThickSpace;&ThickSpace;
+                    <label>Male<input type="radio" name="gender" value="male" /><span class="checkmark"></span>
+                    </label>
+                    <label>Female<input type="radio" name="gender" value="female" /><span class="checkmark"></span>
+                    </label>
+                </div>
+                <input type="email" id="email" placeholder="Email" class="textInput hide"
+                    onkeypress="employee.handlePress(event)" />
+                    <span style="font-size:10px;color: red;" class="errorText" id="mailError">invalied email address</span>
+                <input type="password" id="password" placeholder="Password" class="textInput  hide"
+                    onkeypress="employee.handlePress(event)" />
+                <span style="font-size:10px;color: red;" class="errorText" id="passError">Password should contain at
+                    least one uppercase , one lowercase ,one number and a symbol and at least 8 charaters.</span>
+                <input type="password" id="confirm password" placeholder="Re-enter password" class="textInput hide"
+                    onkeypress="employee.handlePress(event)" />
+                <span id="cnpError" style="font-size:10px;color: red;" class="errorText">Password doesn't match</span>
+                <input type="number" id="contact" placeholder="Contact Number" class="textInput hide"
+                    onkeypress="employee.handlePress(event)" />
+                <span id="contactError" style="font-size:10px;color: red;" class="errorText">Please enter valid conatct
+                    number</span>
+                <button type="submit" class="hide" onclick="handleSubmit(event)">Add Employee</button>
+            </div>
+        </center>
     </div>
-  </div>
-  <div style="overflow:auto;">
-    <div style="float:right;">
-      <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-      <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+
+    <!-- Here user can add vehicle of an employee -->
+    <div id="addVehicleSection">
+        <center>
+            <div class="collapsible">
+                <h3 class="sectionHeading">Add Vehicle</h3>
+                <span class="show"></span>
+            </div>
+            <div class="content">
+                <input placeholder="Model Name" type="text" class="textInput" onkeypress="vehicle.handlePress(event)"
+                    id="name" />
+                <div class="radioContainer hide" id="type" onkeypress="vehicle.handlePress(event)">
+                    <p>What is your vehicle Type?</p>
+                    <label>Cycle<input type="radio" name="type" value="cycle"
+                            onchange="vehicle.updatePriceSection(event)" /><span class="checkmark"></span>
+                    </label>
+                    <label>Motor Cycle<input type="radio" name="type" value="bike"
+                            onchange="vehicle.updatePriceSection(event)" /><span class="checkmark"></span>
+                    </label>
+                    <label>Four Wheeler<input type="radio" name="type" value="car"
+                            onchange="vehicle.updatePriceSection(event)" /><span class="checkmark"></span>
+                    </label>
+                </div>
+                <input placeholder="Vehicle Number" type="text" class="textInput hide"
+                    onkeypress="vehicle.handlePress(event)" id="vehNum" />
+                <input placeholder="Employee Id" type="text" class="textInput hide"
+                    onkeypress="vehicle.handlePress(event)" id="empId" />
+                <textarea rows="5" placeholder="Identification" class="hide" onkeypress="vehicle.handlePress(event)"
+                    id="ident"></textarea>
+                <button type="submit" class="hide" onclick="handleSubmit(event)">Add Vehicle</button>
+            </div>
+        </center>
     </div>
-  </div>
-  <!-- Circles which indicates the steps of the form: -->
-  <div style="text-align:center;margin-top:40px;">
-    <span class="step"></span>
-    <span class="step"></span>
-    <span class="step"></span>
-    <span class="step"></span>
-	<span class="step"></span>
-	<span class="step"></span>
-	<span class="step"></span>
-    <span class="step"></span>
-    <span class="step"></span>
-    <span class="step"></span>
-	<span class="step"></span>
-	<span class="step"></span>
-	<span class="step"></span>
-	<span class="step"></span>
-	<span class="step"></span>
-  </div>
-</form>
-
-
-
- 
-
+    </div>
+    <!-- Here employee can choose the package accor. to their convinience -->
+    <div id="priceSection">
+        <center>
+            <div class="collapsible">
+                <h3 class="sectionHeading">Pricing</h3>
+                <span class="show"></span>
+            </div>
+            <div class=" content">
+                <div id="pricingSection" class="pricingSection">
+                    <div class="priceCard" id="cycle">
+                        <span class="vehicleType">Cycle</span><br /><br />
+                        <div class="circle">
+                            <p style="font-size: 10px;"><span class="bestPrice">$100</span><br />/Month</p>
+                        </div>
+                        <p class="allOffers">$5 daily<br />$100 Monthly<br />$500 yearly</p>
+                        <button type="submit">Purchase Now</button>
+                    </div>
+                    <div class="priceCard" id="bike">
+                        <span class="vehicleType">Motor Cycle</span><br /><br />
+                        <div class="circle">
+                            <p style="font-size: 10px;"><span class="bestPrice">$200</span><br />/Month</p>
+                        </div>
+                        <p class="allOffers">$10 daily<br />$200 Monthly<br />$1000 yearly</p>
+                        <button type="submit">Purchase Now</button>
+                    </div>
+                    <div class="priceCard" id='car'>
+                        <span class="vehicleType">Four Wheelers</span><br /><br />
+                        <div class="circle">
+                            <p style="font-size: 10px;"><span class="bestPrice">$500</span><br />/Month</p>
+                        </div>
+                        <p class="allOffers">$20 daily<br />$500 Monthly<br />$3500 yearly</p>
+                        <button type="submit">Purchase Now</button>
+                    </div>
+                </div>
+            </div>
+        </center>
+    </div>
+</body>
+<script src="assets/js/helper.js"></script>
+<script src="assets/js/Vehicle.js"></script>
+<script src="assets/js/Employee.js"></script>
+<script src="assets/js/app.js"></script>
 <script>
-var currentTab = 0; // Current tab is set to be the first tab (0)
-showTab(currentTab); // Display the current tab
-var type;
-var pack;
-var name;
-var cur;
-
-function showTab(n) {
-  // This function will display the specified tab of the form...
-  var x = document.getElementsByClassName("tab");
-  x[n].style.display = "block";
-  //... and fix the Previous/Next buttons:
-  if (n == 0) {
-    document.getElementById("prevBtn").style.display = "none";
-  } else {
-    document.getElementById("prevBtn").style.display = "inline";
-  }
-  if (n == 5 || n==12) {
-    document.getElementById("nextBtn").innerHTML = "Submit";
-  }
-  else  {
-    document.getElementById("nextBtn").innerHTML = "Next";
-  }
-  //... and run a function that will display the correct step indicator:
-  fixStepIndicator(n)
-}
-
-function nextPrev(n) {
-  // This function will figure out which tab to display
-  var x = document.getElementsByClassName("tab");
-  // Exit the function if any field in the current tab is invalid:
-  if (n == 1 && !validateForm()) return false;
-  // Hide the current tab:
-  x[currentTab].style.display = "none";
-  // Increase or decrease the current tab by 1:
-  currentTab = currentTab + n;
-  // if you have reached the end of the form...
-  if (currentTab >= x.length) {
-    // ... the form gets submitted:
-    document.getElementById("regForm").submit();
-    return false;
-  }
-  // Otherwise, display the correct tab:
-  showTab(currentTab);
-}
-
-function validateForm() {
-  // This function deals with validation of the form fields
-  var x, y, i,  mailformat,paswd,valid = true;
-  x = document.getElementsByClassName("tab");
-  y = x[currentTab].getElementsByTagName("input");
-  mailformat = /^[a-zA-Z0-9.!#$%&'*+=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/;
-  paswd=  /^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{8,15}$/;
-  // A loop that checks every input field in the current tab:
-  for (i = 0; i < y.length; i++) {
-    // If a field is empty...
-	if(y[i].id=="ename"){
-	   if(y[i].value=="" || y[i].value.length<2 || (y[i].value>='0' && y[i].value<='9')){
-          y[i].className += " invalid";
-	      valid = false;
-	 }
-	}
-	else if(y[i].id=="email"){
-	    if(!y[i].value.match(mailformat)){
-	       y[i].className += " invalid";
-	       valid = false;
-	  }
-	}
-	else if(y[i].id=="contact"){
-	    if(y[i].value.length<8 || (y[i].value<='0' && y[i].value>='9')){
-           y[i].className += " invalid";
-	       valid = false;
-	 }
-	}
-	else if(y[i].id=="password"){
-	    if(!y[i].value.match(paswd)){
-	       y[i].className += "weak";
-	       valid = false;
-	  }
-	  else{
-	    if(y[i].value.match(paswd) && y[i].value.length==8)
-		   y[i].className += "ok";
-	    else 
-		   y[i].className += "strong";
-	  }
-	}
-    else{
-	   if (y[i].value == "") {
-      // add an "invalid" class to the field:
-      y[i].className += " invalid";
-      // and set the current valid status to false
-      valid = false;
+    var coll = document.getElementsByClassName("collapsible");
+    var i;
+    for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function () {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.display === "block") {
+                content.style.display = "none";
+            } else {
+                content.style.display = "block";
+            }
+        });
     }
-	}
-  }
-  // If the valid status is true, mark the step as finished and valid:
-  if (valid) {
-    document.getElementsByClassName("step")[currentTab].className += " finish";
-  }
-  return valid; // return the valid status
-}
-
-function fixStepIndicator(n) {
-  // This function removes the "active" class of all steps...
-  var i, x = document.getElementsByClassName("step");
-  for (i = 0; i < x.length; i++) {
-    x[i].className = x[i].className.replace(" active", "");
-  }
-  //... and adds the "active" class on the current step:
-  x[n].className += " active";
-}
-
-function getValue() {
-    type= document.getElementById('type').value;
-} 
-function pricing(){
-  if(type=="cycle"){
-    document.getElementById("price").innerHTML='<div class="column">'+'<h4 style="color:black;">CYCLE</h3>'+
-			 '<h4>$5 Daily</h4>'+
-			  '<h4>$100 Monthly</h4>'+
-			  '<h4>$500 Yearly</h4>'+
-			  '<p class="pbutton">Change Currency</p>'+
-			  '<p><select name="currency"  oninput="getcur()" id="currency">'+
-			   '<option value="USD" >USD</option>'+
-			   '<option value="YEN" >YEN</option>'+
-			   '</select>'+'</p>'+
-			  'Vehicle Price:'+
-              '<p><select name="type" oninput="getPack()" id="vpack">'+
-			   '<option value="5" class="pbutton">$5 Daily</option>'+
-			   '<option value="100" class="pbutton">$100 Monthly</option>'+
-			   '<option value="500" class="pbutton">$500 Yearly</option>'+
-			'</select>'+'</p>'+'</div>';
-  }
-else if(type=="motorcycle"){
-    document.getElementById("price").innerHTML='<div class="column">'+'<h4 style="color:black;">MOTOR-CYCLE</h3>'+
-			 '<h4>$10 Daily</h4>'+
-			  '<h4>$200 Monthly</h4>'+
-			  '<h4>$1000 Yearly</h4>'+
-			  '<p class="pbutton">Change Currency</p>'+
-			  '<p><select name="currency"  oninput="getcur()" id="currency">'+
-			   '<option value="USD" class="pbutton">USD</option>'+
-			   '<option value="YEN" class="pbutton">YEN</option>'+
-			   '</select>'+'</p>'+
-			  'Vehicle Price:'+
-              '<p><select name="type" oninput="getPack()" id="vpack">'+
-			   '<option value="10" class="pbutton">$10</option>'+
-			   '<option value="200" class="pbutton">$200</option>'+
-			   '<option value="1000" class="pbutton">$1000</option>'+
-			'</select>'+'</p>'+'</div>';
-  }
-else if(type=="fourwheeler"){
-    document.getElementById("price").innerHTML='<div class="column">'+'<h4 style="color:black;">FOUR-WHEELER</h3>'+
-			 '<h4>$20 Daily</h4>'+
-			  '<h4>$500 Monthly</h4>'+
-			  '<h4>$3500 Yearly</h4>'+
-			  '<p class="pbutton">Change Currency</p>'+
-			  '<p><select name="currency"  oninput="getcur()" id="currency">'+
-			   '<option value="USD" class="pbutton">USD</option>'+
-			   '<option value="YEN" class="pbutton">YEN</option>'+
-			   '</select>'+'</p>'+
-			  'Vehicle Price:'+
-              '<p><select name="type" oninput="getPack()" id="vpack">'+
-			   '<option value="20" class="pbutton">$20</option>'+
-			   '<option value="500" class="pbutton">$500</option>'+
-			   '<option value="3500" class="pbutton">$3500</option>'+
-			'</select>'+'</p>'+'</div>';
-  }
-}
-function getPack() {
-    pack= document.getElementById('vpack').value;
-}
-function getcur() {
-    cur= document.getElementById('currency').value;
-}
-function getname() {
-    name= document.getElementById('ename').value;
-} 
-function price(){
-    document.getElementById("getpass").innerHTML=pack +cur;
-}
 </script>
 
-</body>
 </html>
